index page are completed

--- a/index.html
+++ b/index.html
@@ -566,35 +566,39 @@
     </section>
     <!-- end feature section -->
     <!-- start footer section -->
-    <footer>
+    <footer class="footer_background py-5">
       <div class="container">
         <div class="row">
-          <section>
-            <h3></h3>
-            <div>
-              <span>قلم کاری</span>
-              <span>خاتم کاری</span>
-              <span>مینا کاری</span>
-              <span>ظروف سفالی</span>
-              <span>مس و پرداز</span>
-              <span>تابلو</span>
-              <span>فیروزه کوبی</span>
-              <span>کتیبه</span>
-            </div>
-          </section>
-          <section>
-            <h3>ارتباط باما</h3>
-            <span>تلفن تماس: 0211525252</span>
-            <span>آدرس: تهران، ولیعصر</span>
-          </section>
-          <section>
-            <h1>اعتماد به سیمرغ</h1>
-            <div>
-              <img src="" alt="logo">
-              <img src="" alt="logo">
-            </div>
-            <div><input type="text"><i class="search"></i></div>
-          </section>
+          <div class="d-flex align-items-start justify-content-center justify-content-md-between flex-wrap">
+            <section class="footer-group">
+              <h3 class="footer_title">دسته بندی ها</h3>
+              <div class="footer-group-lists">
+                <a href="#" class="footer-group_list">قلم کاری</a>
+                <a href="#" class="footer-group_list">خاتم کاری</a>
+                <a href="#" class="footer-group_list">مینا کاری</a>
+                <a href="#" class="footer-group_list">ظروف سفالی</a>
+                <a href="#" class="footer-group_list">مس و پرداز</a>
+                <a href="#" class="footer-group_list">تابلو</a>
+                <a href="#" class="footer-group_list">فیروزه کوبی</a>
+                <a href="#" class="footer-group_list">کتیبه</a>
+              </div>
+            </section>
+            <section class="footer-conection">
+              <h3 class="footer-conection_title">ارتباط باما</h3>
+              <div class="footer-conection-contents">
+                <div class="footer-conection_tell"><span>تلفن تماس:</span> <a class="text-decoration-none" href="#">09123456789</a></div>
+                <div class="footer-conection_address"><span>آدرس:</span> <a class="text-decoration-none" href="#">تهران، ولیعصر</a></div>
+              </div>
+            </section>
+            <section class="footer-howtrust">
+              <h3 class="footer-howtrust_title">اعتماد به سیمرغ</h3>
+              <div class="footer-howtrust-contents">
+                <img class="footer-howtrust_img" src="./images/certificates/enamad.png" alt="logo">
+                <img class="footer-howtrust_img" src="./images/certificates/etehadiye.png" alt="logo">
+                <img class="footer-howtrust_img" src="./images/certificates/samandehi.png" alt="logo">
+              </div>
+            </section>
+          </div>
         </div>
       </div>
     </footer>
