--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
       </div>
     </section>
     <!-- end feature section -->
+
     <!-- start footer section -->
     <footer class="footer_background py-5">
       <div class="container">
@@ -604,7 +605,13 @@
     </footer>
     <!-- end footer section -->
 
-
+          <!-- scroll to up button -->
+            <a href="#" class="move-top d-none d-md-block">
+              <span class="move-top_btn">
+                <i class="bi bi-arrow-up-short"></i>
+              </span>
+            </a>
+          <!-- scroll to up button -->
 
     <!-- JavaScript Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
