--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     محصولات
                   </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu dropdown-menu-custom">
                     <li><a class="dropdown-item" href="#">دسته 1</a></li>
                     <li><a class="dropdown-item" href="#">دسته 2</a></li>
                   </ul>
@@ -58,7 +58,7 @@
             <img class="navbar-brand d-lg-none" src="./images/logo.png" width="80px"/>
           </div>
           <div class="d-flex">
-            <a href="#" class="nav-shoping_btn" data-bs-toggle="modal" data-bs-target="#searchIcon"><i class="bi bi-search nav-search_icon"></i></a>
+            <a href="#" class="nav-search_btn" data-bs-toggle="modal" data-bs-target="#searchIcon"><i class="bi bi-search nav-search_icon"></i></a>
             <a href="#" class="nav-shoping_btn"><i class="bi bi-bag-check nav-shoping_icon"></i></a>
             <a href="#" class="btn btn-outline-primary d-none d-md-block text-decoration-none" data-bs-toggle="modal" data-bs-target="#accountUserModal"> ورود | ثبت نام </a>
             <a href="#" class="nav-account_user d-md-none" data-bs-toggle="modal" data-bs-target="#accountUserModal"><i class="bi bi-person-circle nav-account_user_icon"></i></a>
@@ -77,7 +77,7 @@
             <div class="mb-2">
               <label for="basic-url" class="form-label">تلفن <span class="text-danger">*</span></label>
               <div class="input-group input-group-sm">
-                <span class="input-group-text" id="basic-addon3"><i class="bi bi-person-fill"></i></span>
+                <span class="input-group-text" id="basic-addon3"><i class="bi bi-phone-fill text-primary"></i></span>
                 <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
               </div>
               <div class="form-text text-danger d-none" id="">شماره تلفن الزامی هست.</div>
@@ -85,9 +85,9 @@
             <div class="mb-4">
               <label for="basic-url" class="form-label">رمز عبور <span class="text-danger">*</span></label>
               <div class="input-group input-group-sm">
-                <span class="input-group-text" id="basic-addon3"><i class="bi bi-key-fill"></i></span>
+                <span class="input-group-text" id="basic-addon3"><i class="bi bi-key-fill text-primary"></i></span>
                 <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3 basic-addon4">
-                <span class="input-group-text" id=""><i class="bi bi-eye-slash-fill"></i></span>
+                <span class="input-group-text" id=""><i class="bi bi-eye-slash-fill text-primary"></i></span>
                 <!-- <i class="bi bi-eye-fill"></i> -->
               </div>
               <div class="form-text text-danger d-none" id="basic-addon4">رمز عبور الزامی هست.</div>
@@ -101,8 +101,8 @@
             </div>
           </div>
           <div class="modal-footer modal-footer_custom">
-            <button type="button" class="btn btn-outline-danger">ثبت نام</button>
-            <button type="button" class="btn btn-outline-primary"><i class="bi bi-arrow-left-circle fs-5"></i> ورود </button>
+            <a href="./signin.html" type="button" class="btn btn-outline-danger">ثبت نام</a>
+            <button type="button" class="btn btn-primary"> ورود <i class="bi bi-arrow-left-circle fs-5"></i></button>
           </div>
 
         </div>
@@ -121,30 +121,81 @@
               </div>
               <div class="form-text text-danger d-none" id="">محصول مورد نظر یافت نشد!</div>
           </div>
-          <div class="modal-body"> 
-              
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-                <p>
-                  This is some placeholder content to show the scrolling behavior for modals. We use repeated line breaks to demonstrate how content can exceed minimum inner height, thereby showing inner scrolling. When content becomes longer than the predefined max-height of modal, content will be cropped and scrollable within the modal.
-                </p>
-              
+          <div class="modal-body modal-body-scrollbar"> 
+              <div class="d-flex flex-column align-items-center justify-content-start flex-nowrap">
+
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image5.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image1.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image2.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image3.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image4.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image3.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image2.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image3.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image4.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+                <div class="card-search-result">
+                  <img class="card-search-result_img" src="./images/newest/image3.png" alt="image">
+                  <div class="card-search-result_contents">
+                    <h6 class="card-search-result_title">جاقلمی خاتم کاری</h6>
+                    <span class="card-search-result_designer_name">طرح اصفهان</span>
+                  </div>
+                </div>
+
+              </div>
           </div>
 
         </div>
@@ -606,11 +657,11 @@
     <!-- end footer section -->
 
           <!-- scroll to up button -->
-            <a href="#" class="move-top d-none d-md-block">
+            <div class="move-top" id="moveTopBtn">
               <span class="move-top_btn">
-                <i class="bi bi-arrow-up-short"></i>
+                <i class="bi bi-arrow-up-short text-primary"></i>
               </span>
-            </a>
+            </div>
           <!-- scroll to up button -->
 
     <!-- JavaScript Bootstrap -->
